--- a/templates/login.html
+++ b/templates/login.html
@@ -70,7 +70,8 @@
             display: block;
             margin-bottom: 0.5rem;
             font-weight: 500;
-            color: var(--dark);
+            color: #64748B;
+            margin-right: 10px;
         }
         
         .form-group input {
@@ -153,17 +154,17 @@
             
             <form method="POST" action="{{ url_for('login') }}">
                 <div class="form-group">
-                    <label>Usuário</label>
+                    <label>{{ translate('Usuário') }}</label>
                     <input type="text" name="username" required>
                 </div>
                 
                 <div class="form-group">
-                    <label>Senha</label>
+                    <label>{{ translate('Senha') }}</label>
                     <input type="password" name="password" required>
                 </div>
                 
                 <button type="submit" class="btn">
-                    Entrar
+                    {{ translate('Entrar') }}
                 </button>
             </form>
         </div>
